--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
                     <a href="ui-attributes.html" class="text-gray-700 hover:text-primary-600 font-medium transition duration-150">通用属性</a>
                     <a href="ui-color-categories.html" class="text-gray-700 hover:text-primary-600 font-medium transition duration-150">颜色分类</a>
                     <a href="ui-colors.html" class="text-gray-700 hover:text-primary-600 font-medium transition duration-150">颜色大全</a>
+                    <a href="ui-scenarios.html" class="text-gray-700 hover:text-primary-600 font-medium transition duration-150">具体场景</a>
+                    <a href="ui-overlays.html" class="text-gray-700 hover:text-primary-600 font-medium transition duration-150 relative">
+                        覆盖效果
+                        <span class="absolute -top-2 -right-2 bg-red-500 text-white text-xs px-1 rounded-full">新</span>
+                    </a>
+                    <a href="ui-overlay-example.html" class="text-gray-700 hover:text-primary-600 font-medium transition duration-150 relative">
+                        遮挡效果实例
+                        <span class="absolute -top-2 -right-2 bg-orange-500 text-white text-xs px-1 rounded-full">示例</span>
+                    </a>
                 </nav>
                 
                 <!-- 移动端菜单按钮 -->
@@ -140,6 +149,15 @@
                 <a href="ui-attributes.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">通用属性</a>
                 <a href="ui-color-categories.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">颜色分类</a>
                 <a href="ui-colors.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">颜色大全</a>
+                <a href="ui-scenarios.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">具体场景</a>
+                <a href="ui-overlays.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 relative">
+                    覆盖效果
+                    <span class="absolute top-2 ml-2 bg-red-500 text-white text-xs px-1 rounded-full">新</span>
+                </a>
+                <a href="ui-overlay-example.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 relative">
+                    遮挡效果实例
+                    <span class="absolute top-2 ml-2 bg-orange-500 text-white text-xs px-1 rounded-full">示例</span>
+                </a>
             </div>
         </div>
     </header>
@@ -191,6 +209,8 @@
                         <h3 class="text-lg font-medium text-gray-900">最新公告</h3>
                         <div class="mt-2 text-sm text-gray-600">
                             <p>我们很高兴地宣布，UI指导书现已完全支持暗黑模式设计！新增的暗黑模式色彩系统将帮助设计师创建符合现代用户偏好的界面。此外，我们还优化了组件库的无障碍设计，使您的产品能够服务更广泛的用户群体。</p>
+                            <p class="mt-2 pb-2 border-b border-dashed border-gray-200"></p>
+                            <p class="mt-2"><span class="inline-block px-2 py-1 bg-red-100 text-red-600 rounded-lg text-xs font-medium mr-2">最新功能</span><strong>各类遮挡元素对比工具</strong> - 我们推出了<a href="ui-overlays.html" class="text-primary-600 hover:underline">覆盖层效果对比工具</a>，您可以直观查看不同遮挡元素的效果对比，通过滑块控制查看应用前后的区别，帮助您在设计中选择最适合的覆盖效果。</p>
                         </div>
                     </div>
                 </div>
